--- a/moto ride.css
+++ b/moto ride.css
@@ -3094,6 +3094,8 @@ i {
   height: 30px;
   color: black;
   cursor: pointer;
+  border-radius: 0;
+  border: 1px solid white;
 }
 
 .wish_actions {
