--- a/moto ride.css
+++ b/moto ride.css
@@ -435,6 +435,18 @@ header {
 }
 
 /*Side Filter*/
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  z-index: 999;
+  display: none;
+}
+
 .navigation_menu {
   margin: 0px;
   width: 80%;
@@ -442,21 +454,22 @@ header {
   position: fixed;
   top: 0px;
   right: 0px;
-  z-index: 999;
+  z-index: 1000;
   transition: transform 0.3s ease;
   background-color: black;
   color: white;
   display: none;
   border-left: 1px solid white;
   overflow-y: auto;
+  transform: translateX(100%);
 }
 
 .navigation_menu_open_click {
   transform: translateX(0);
 }
 
-.navigation_menu_close_click {
-  transform: translateX(100%);
+.navigation_menu ul {
+  list-style: none;
 }
 
 .navigation_menu a {
@@ -2380,6 +2393,51 @@ svg {
 }
 
 /*!Motorcycle catalog*/
+.category_header {
+  position: sticky;
+  top: 0;
+  z-index: 998;
+  background-image: url(images/other/abstract-pattern-design_1053-525.jpg);
+  border-bottom: 1px solid white;
+}
+
+.catalog_menu {
+  width: 80%;
+  height: 100vh;
+  background-color: black;
+  margin: 0;
+  position: fixed;
+  left: 0;
+  top: 100px;
+  z-index: 997;
+  overflow-y: auto;
+  border-right: 1px solid white;
+  display: none;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #83cbff black;
+  padding-bottom: 150px;
+  transition: transform 0.3s ease;
+  transform: translateX(-100%);
+}
+
+.catalog_menu_open {
+    transform: translateX(0%);
+}
+
+.catalog_overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  top: 0;
+  left: 0;
+  z-index: 996;
+  margin: 0;
+  display: none;
+}
+
 /*Big filter sidebar*/
 .filter_sidebar {
   width: 250px;
@@ -2391,7 +2449,9 @@ svg {
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #83cbff black;
+  margin-bottom: 50px;
 }
+
 
 .filter_sidebar h3 {
   margin-bottom: 10px;
@@ -2456,17 +2516,25 @@ svg {
 
 /*Min filter block*/
 .filter_box {
-  width: 150px;
+  color: white;
+  width: 100%;
   height: 50px;
-  display: none;
-  position: relative;
-  left: 40px;
+}
+
+.filter_box_query {
+  position: sticky;
+  left: 0px;
+  top: 140.67px;
+  z-index: 998;
+  background-image: url(images/other/abstract-pattern-design_1053-525.jpg);
 }
 
 .filter_box ul {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  width: 150px;
+  left: 40px;
 }
 
 i {
@@ -2508,6 +2576,7 @@ i {
 
   .filter_box {
     display: block;
+    top: 140.67px;
   }
 
   .products_list_box {
@@ -2516,6 +2585,12 @@ i {
 
   .product_super_box {
     width: calc(100% - 40px);
+  }
+
+  .catalog_menu {
+    top: 140.67px;
+    padding-top: 50px;
+    display: block;
   }
 }
 
@@ -2527,6 +2602,7 @@ i {
 
   .filter_box {
     display: block;
+    top: 140.67px;
   }
 
   .products_list_box {
@@ -2536,16 +2612,24 @@ i {
   .product_super_box {
     width: calc(50% - 40px);
   }
+
+    .catalog_menu {
+    top: 140.67px;
+    padding-top: 50px;
+    display: block;
+  }
 }
 
 /*Tablet*/
 @media screen and (min-width: 769px) and (max-width: 992px) {
+  
   .filter_sidebar {
     display: none;
   }
 
   .filter_box {
     display: block;
+    top: 100.67px;
   }
 
   .products_list_box {
@@ -2554,6 +2638,12 @@ i {
 
   .product_super_box {
     width: calc(50% - 40px);
+  }
+
+  .catalog_menu {
+    top: 100.67px;
+    padding-top: 50px;
+    display: block;
   }
 }
 
