--- a/moto ride.css
+++ b/moto ride.css
@@ -445,6 +445,7 @@ header {
   backdrop-filter: blur(4px);
   z-index: 999;
   display: none;
+  margin: 0;
 }
 
 .navigation_menu {
@@ -1251,15 +1252,34 @@ header {
   margin-top: 0px;
 }
 
-.product_logo_box i {
+.add_to_wishlist {
   color: #a9a9a9;
   font-size: 24px;
   margin-right: 12px;
 }
 
-.product_logo_box i:hover {
+.add_to_wishlist:hover {
   color: red;
   cursor: pointer;
+}
+
+.add_to_wishlist_click {
+    color: red;
+}
+
+.add_to_cart {
+  color: #a9a9a9;
+  font-size: 24px;
+  margin-right: 12px;
+}
+
+.add_to_cart:hover {
+  color: red;
+  cursor: pointer;
+}
+
+.add_to_cart_click {
+  color: red;
 }
 
 .center {
@@ -2409,13 +2429,9 @@ svg {
   position: fixed;
   left: 0;
   top: 100px;
-  z-index: 997;
-  overflow-y: auto;
+  z-index: 998;
   border-right: 1px solid white;
   display: none;
-  overflow-y: auto;
-  scrollbar-width: thin;
-  scrollbar-color: #83cbff black;
   padding-bottom: 150px;
   transition: transform 0.3s ease;
   transform: translateX(-100%);
@@ -2431,11 +2447,31 @@ svg {
   height: 100vh;
   background-color: rgb(0, 0, 0, 0.4);
   backdrop-filter: blur(4px);
-  top: 0;
+  top: 139.67px;
   left: 0;
   z-index: 996;
   margin: 0;
   display: none;
+}
+
+.catalog_menu_overflow {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: #83cbff black;
+}
+
+.filter_sidebar_responsive {
+  display: flex;
+  position: relative;
+  left: 35px;
+  margin: 0;
+  color: white;
+}
+
+.filter_sidebar_responsive h3 {
+  margin-bottom: 10px;
 }
 
 /*Big filter sidebar*/
@@ -2451,7 +2487,6 @@ svg {
   scrollbar-color: #83cbff black;
   margin-bottom: 50px;
 }
-
 
 .filter_sidebar h3 {
   margin-bottom: 10px;
@@ -2517,8 +2552,9 @@ svg {
 /*Min filter block*/
 .filter_box {
   color: white;
-  width: 100%;
+  width: 80%;
   height: 50px;
+  display: none;
 }
 
 .filter_box_query {
@@ -2530,11 +2566,15 @@ svg {
 }
 
 .filter_box ul {
+  display: flex;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 150px;
-  left: 40px;
+  width: 100%;
+  z-index: 999;
+  padding: 16px 0px 16px 35px;
+}
+
+.filter_box ul li:first-child {
+  margin-right: 20px;
 }
 
 i {
@@ -2588,7 +2628,7 @@ i {
   }
 
   .catalog_menu {
-    top: 140.67px;
+    top: 141.67px;
     padding-top: 50px;
     display: block;
   }
@@ -2614,7 +2654,7 @@ i {
   }
 
     .catalog_menu {
-    top: 140.67px;
+    top: 141.67px;
     padding-top: 50px;
     display: block;
   }
