fix product hover

--- a/moto ride.css
+++ b/moto ride.css
@@ -1846,6 +1846,14 @@ svg {
     width: calc(100% - 40px);
   }
 
+  .add_to_wishlist:hover {
+    color: #a9a9a9;
+  }
+
+  .add_to_cart:hover {
+    color: #a9a9a9;
+  }
+
   /*Subcategory block*/
   .subcategory {
     margin: 0px 30px;
@@ -2067,6 +2075,14 @@ svg {
     width: calc(50% - 40px);
   }  
 
+  .add_to_wishlist:hover {
+    color: #a9a9a9;
+  }
+
+  .add_to_cart:hover {
+    color: #a9a9a9;
+  }
+
   /*חלק תחתון של אתר*/
   footer {
     padding: 0px;
@@ -2229,6 +2245,14 @@ svg {
     width: calc(50% - 40px);
   }  
 
+  .add_to_wishlist:hover {
+    color: #a9a9a9;
+  }
+
+  .add_to_cart:hover {
+    color: #a9a9a9;
+  }
+
   /*חלק תחתון של אתר*/
   footer {
     padding: 0px;
@@ -2368,6 +2392,14 @@ svg {
   /*מבנה תיבת מוצר*/
   .top_product_super_box {
     width: calc(25% - 40px);
+  }
+
+  .add_to_wishlist:hover {
+    color: #a9a9a9;
+  }
+
+  .add_to_cart:hover {
+    color: #a9a9a9;
   }
 
   /*חלק תחתון של אתר*/
