--- a/moto ride.css
+++ b/moto ride.css
@@ -1847,11 +1847,11 @@ svg {
   }
 
   .add_to_wishlist:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   .add_to_cart:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   /*Subcategory block*/
@@ -2076,11 +2076,11 @@ svg {
   }  
 
   .add_to_wishlist:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   .add_to_cart:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   /*חלק תחתון של אתר*/
@@ -2246,11 +2246,11 @@ svg {
   }  
 
   .add_to_wishlist:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   .add_to_cart:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   /*חלק תחתון של אתר*/
@@ -2395,11 +2395,11 @@ svg {
   }
 
   .add_to_wishlist:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   .add_to_cart:hover {
-    color: #a9a9a9;
+    color: inherit;
   }
 
   /*חלק תחתון של אתר*/
