--- a/moto ride.css
+++ b/moto ride.css
@@ -1257,6 +1257,10 @@ header {
   color: #a9a9a9;
   font-size: 24px;
   margin-right: 12px;
+}
+
+.add_to_wishlist:hover {
+  color: red;
   cursor: pointer;
 }
 
@@ -1268,6 +1272,10 @@ header {
   color: #a9a9a9;
   font-size: 24px;
   margin-right: 12px;
+}
+
+.add_to_cart:hover {
+  color: red;
   cursor: pointer;
 }
 
