--- a/moto ride.css
+++ b/moto ride.css
@@ -1257,6 +1257,11 @@ header {
   color: #a9a9a9;
   font-size: 24px;
   margin-right: 12px;
+  cursor: pointer;
+}
+
+.add_to_wishlist:hover {
+  color: red;
 }
 
 .add_to_wishlist_click {
@@ -1267,6 +1272,11 @@ header {
   color: #a9a9a9;
   font-size: 24px;
   margin-right: 12px;
+  cursor: pointer;
+}
+
+.add_to_cart:hover {
+  color: red;
 }
 
 .add_to_cart_click {
@@ -1871,6 +1881,14 @@ svg {
   svg {
     width: 20px;
     height: 20px;
+  }
+}
+
+/*XS Phone*/
+@media screen and (max-width: 360px){
+  /*החלק העליון של האתר*/
+  .logo {
+    display: none;
   }
 }
 
@@ -2624,6 +2642,11 @@ i {
   }
 }
 
+/*XS Phone*/
+@media screen and (max-width: 360px){
+
+}
+
 /*Xl Phone*/
 @media screen and (min-width: 601px) and (max-width: 768px) {
   .filter_sidebar {
@@ -2982,6 +3005,11 @@ i {
   }
 }
 
+/*XS Phone*/
+@media screen and (max-width: 360px){
+
+}
+
 /*Xl Phone*/
 @media screen and (min-width: 601px) and (max-width: 768px) {
   .cart_box {
@@ -3310,6 +3338,11 @@ i {
   .update_wish_button {
     width: 100px;
   }
+}
+
+/*XS Phone*/
+@media screen and (max-width: 360px){
+
 }
 
 /*Xl Phone*/
@@ -3715,6 +3748,11 @@ i {
   }
 }
 
+/*XS Phone*/
+@media screen and (max-width: 360px){
+
+}
+
 /*Xl Phone*/
 @media screen and (min-width: 601px) and (max-width: 768px) {
   .product_page_box {
@@ -4100,6 +4138,11 @@ i {
   }
 }
 
+/*XS Phone*/
+@media screen and (max-width: 360px){
+
+}
+
 /*Xl Phone*/
 @media screen and (min-width: 601px) and (max-width: 768px) {
   .log_in_box_wallpaper {
@@ -4305,6 +4348,21 @@ i {
 
   .contact_input_box input {
     margin-left: 0px;
+  }
+}
+
+/*XS Phone*/
+@media screen and (max-width: 360px){
+  .contact_input_box {
+    width: 145px;
+  }
+
+  .contact_input_box input {
+    width: 145px;
+  }
+
+  .contact_form button {
+    width: 155px;
   }
 }
 
