--- a/moto ride.css
+++ b/moto ride.css
@@ -2763,6 +2763,11 @@ i {
   list-style: none;
 }
 
+.cart_filter ul li {
+  width: 85px;
+  overflow-x: hidden;
+}
+
 .chosen_product_list {
   width: 100%;
   height: 200px;
@@ -2774,7 +2779,7 @@ i {
   position: relative;
 }
 
-.delete_product {
+.cart_delete {
   cursor: pointer;
   position: absolute;
   left: 0%;
@@ -2808,6 +2813,11 @@ i {
   align-items: center;
   list-style: none;
   width: calc(100% - 300px);
+}
+
+.chosen_product_list ul li {
+  width: 85px;
+  overflow-x: hidden;
 }
 
 .chosen_product_input {
@@ -2975,6 +2985,10 @@ i {
     width: calc(100% - 135px);
   }
 
+   .cart_filter ul li {
+    width: 60px;
+   }
+
   .chosen_product_img_box {
     width: 100px;
     height: 100px;
@@ -2984,6 +2998,10 @@ i {
   .chosen_product_list ul {
     font-size: 10px;
     width: calc(100% - 135px);
+  }
+
+  .chosen_product_list ul li {
+    width: 60px;
   }
 
   .coupns_code_box input {
@@ -3007,7 +3025,23 @@ i {
 
 /*XS Phone*/
 @media screen and (max-width: 360px){
+  .chosen_product_img_box {
+    display: none;
+  }
 
+  .cart_filter {
+    justify-content: start;
+  }
+
+  .cart_filter ul {
+    margin-left: 30px;
+    width: 100%;
+  }
+
+  .chosen_product_list ul {
+    margin-left: 30px;
+    width: 100%;
+  }
 }
 
 /*Xl Phone*/
@@ -3028,12 +3062,20 @@ i {
     width: calc(100% - 220px);
   }
 
+  .cart_filter ul li {
+    width: 70px;
+  }
+
   .chosen_product_img_box {
     margin-left: 40px;
   }
 
   .chosen_product_list ul {
     width: calc(100% - 220px);
+  }
+
+  .chosen_product_list ul li {
+    width: 70px;
   }
 
   .coupns_code_box input {
@@ -3073,12 +3115,20 @@ i {
     width: calc(100% - 220px);
   }
 
+  .cart_filter ul li {
+    width: 100px;
+  }
+
   .chosen_product_img_box {
     margin-left: 40px;
   }
 
   .chosen_product_list ul {
     width: calc(100% - 220px);
+  }
+
+  .chosen_product_list ul li {
+    width: 100px;
   }
 
   .checkout_box {
@@ -3112,12 +3162,20 @@ i {
     width: calc(100% - 220px);
   }
 
+  .cart_filter ul li {
+    width: 100px;
+  }
+
   .chosen_product_img_box {
     margin-left: 40px;
   }
 
   .chosen_product_list ul {
     width: calc(100% - 220px);
+  }
+
+  .chosen_product_list ul  li{
+    width: 100px;
   }
 
   .checkout_box {
@@ -3342,7 +3400,9 @@ i {
 
 /*XS Phone*/
 @media screen and (max-width: 360px){
-
+  .wish_header p {
+    width: 185px;
+  }
 }
 
 /*Xl Phone*/
