--- a/client/src/main.css
+++ b/client/src/main.css
@@ -284,10 +284,9 @@ header {
 .welcome_animation_box {
   width: 40px;
   height: 40px;
-  background-color: #d6eaf9;
-  border: 3px solid white;
+  background-color: white;
+  border: 1px solid #601E1E;
   border-radius: 6px;
-  box-shadow: 0px 0px 8px white, 0px 0px 8px white inset;
   margin-left: 20px;
   animation-name: welcome_animation_box;
   animation-duration: 3s;
@@ -327,11 +326,19 @@ header {
   width: 155px;
   border: none;
   outline: none;
-  background-color: #d6eaf9;
+  background-color: white;
   height: 30px;
   animation-name: welcome_animation_input;
   animation-duration: 5s;
   font-weight: bold;
+}
+
+.welcome_animation_input:-webkit-autofill,
+#myInput:-webkit-autofill:hover,
+#myInput:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 1000px white inset !important; /* רקע לבן */
+  -webkit-text-fill-color: black !important; /* טקסט שחור */
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .welcome_animation_input::placeholder {
